<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/header"
        android:textColor="@color/black"
        android:backgroundTint="#966F33"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/txtImageView"
                    android:layout_width="match_parent"
                    android:layout_height="205dp"
                    app:srcCompat="@drawable/restaurant" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtEnterName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:gravity="center"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtEnterHpNo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:gravity="center_horizontal"
                        android:text="@string/hpNo" />

                    <EditText
                        android:id="@+id/etHpNo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtGrpSize"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:gravity="center_horizontal"
                        android:text="@string/grpSize" />

                    <Spinner
                        android:id="@+id/spNoOfPeople"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1.08" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/tbSmoking"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="ToggleButton"
                        android:textOff="Non-smoking"
                        android:textOn="Smoking"
                        android:background="@color/woodBrown"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtSpace1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/txtChooseDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/chooseDate" />

                    <CalendarView
                        android:id="@+id/calendarView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnDisplayDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cfmDate" />

                    <TextView
                        android:id="@+id/txtDateDisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtSpace2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/txtChooseTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/chooseTime"
                        android:textSize="20sp" />

                    <TimePicker
                        android:id="@+id/tpChooseTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner" />

                    <Button
                        android:id="@+id/btnDisplayTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cfmTime" />

                    <TextView
                        android:id="@+id/txtTimeDisplay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

                <TextView
                    android:id="@+id/txtSpace3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/resetBtn" />

                    <Button
                        android:id="@+id/btnConfirmReservation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cfmReservation" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>